<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:gravity="top"
        android:padding="10dp"
        android:orientation="vertical">

    <TextView

        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:background="#6200EE"
        android:gravity="center"
        android:text="@string/inscription"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/nom"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/nomInscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:gravity="center|left"
                android:text="@string/pr_nom"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/prenomInscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emailInscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mot_de_passe"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passeInscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_l_phone"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/telInscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercice"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/ExerciceInscription"
                android:layout_width="300dp"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"            android:paddingLeft="5dp"
                android:text="@string/domaine"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/domaineInscription"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adresse_prof"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/adresseInscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="20sp"/>
        </LinearLayout>


    <Button
        android:id="@+id/inscription"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:background="#6200EE"
        android:gravity="center"
        android:text="VALIDER"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />


</LinearLayout>
</ScrollView>